no cite in report

--- a/Report/related.tex
+++ b/Report/related.tex
@@ -1,7 +1,6 @@
 %!TEX root = report.tex
 \chapter{Related Work} % (fold)
 \label{cha:related_work}
-\nocite{*}
 Introduction to related work. What is relevant to discuss. what do we talk about when we're talking about paper and desktop interfaces
 
 Research in moving controls onto the physical desktop has mainly focused on three approaches; extending the screen onto the desktop using projection, pen tracking on paper and multi-touch desktops.
@@ -58,7 +57,7 @@ Generally the usage of the links decrease temporally, usually within hours, yet 
 % PaperPoint
 
 PaperPoint \cite{Signer:2007:PPP:1226969.1226981} utilises an Anoto\cite{anoto2011anoto} pen and interactive paper to control and annotate PowerPoint  presentations. The slides are printed on interactive paper and the presenter can then chose which slides are shown. The presenter can also annotate the slides during the presentation, by using the Anoto pen on the printed slides, making the annotations appear digitally. \\
-SHOULD WE TALK ABOUT THE RESULTS??
+SHOULD WE TALK ABOUT THE RESULTS??\\
 Users reported that they liked the flexibility provided by PaperPoint and that using the system has changed the way they prepared presentations; they started to include slides in their presentations that they were not completely sure would be used. This only seemed to be an advantage when the presenter were familiar with the slides or the presenter was experienced, for others the usage of PaperPoint resulted in presenters eing under-prepared in structure and content of the presentation. The PaperPoint system were also reported to work well when more than one presenter used the system.\\
 
 RELATE TO OUR IDEA \\
