--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -209,3 +209,11 @@
   booktitle={proceedings of the 1st International Workshop on Paper Computing (PaperComp 2010)},
   year={2010}
 }
+@inproceedings{rekimoto1999augmented,
+  title={Augmented surfaces: a spatially continuous work space for hybrid computing environments},
+  author={Rekimoto, Jun and Saitoh, Masanori},
+  booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
+  pages={378--385},
+  year={1999},
+  organization={ACM}
+}
