--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -217,3 +217,13 @@
   year={1999},
   organization={ACM}
 }
+@article{wellner1993interacting,
+  title={Interacting with paper on the DigitalDesk},
+  author={Wellner, Pierre},
+  journal={Communications of the ACM},
+  volume={36},
+  number={7},
+  pages={87--96},
+  year={1993},
+  publisher={ACM}
+}
