changes from meeting + related work intro

--- a/Report/related.tex
+++ b/Report/related.tex
@@ -3,9 +3,7 @@
 \label{cha:related_work}
 [Introduction to related work. ]
 
-Research in moving controls onto the physical desktop has mainly focused on four approaches; extending the screen onto the desktop using projection, using a physical surface as an input space, pen tracking on paper and multi-touch desktops.
-
-
+Research in moving controls onto the physical desktop can be divided into four themes; Augmented and interactive desktops, multi-touch displays, using the physical world as input canvas with minimal feedback, and pen and paper tracking. In the following we will discuss important work relevant to each theme, and relate this work to our own. 
 
 \subsection{Augmented and interactive desktops} % (fold)
 \label{sub:aug}
@@ -80,7 +78,7 @@ Users reported that they liked the flexibility provided by PaperPoint and that u
 
 
 
-[Sum up was the related work is and relate and contrast to what we are going to do]
+[Sum up what the related work is and relate and contrast to what we are going to do]
 
 
 %Overall it is clear that many attempts have been made to move functionality away from the main screen and onto an adjacent medium. We know we can utilise the empty space on the desktop from the work done on BonFire \cite{kane2009bonfire}, MagicDesk \cite{bi2011magic} and the Unadorned Desk \cite{hausen2012unadorned} especially. PLink \cite{steimle2011plink} allows the user to have more than one piece of digital paper, even special dotted post-its. We will also use more than one piece of paper to give users the possibility of putting together several papers at will to create personalised controls. The focus of VoodooSketch \cite{Block:2008:VEI:1347390.1347404} is on enabling round-the-table collaborative adaptable controls, but for a single application. Like VoodooSketch , we will also focus on controller adaptability and creation, however we will focus on a single user, in a computer-desktop configuration. We will focus on creating and using controls for multiple applications when they are needed, whereas VoodooSketch and PaperPoint \cite{Signer:2007:PPP:1226969.1226981} focuses on creating or using controls configured for one application. In short we will combine utilisation of empty space around the desktop investigated by MagicDesk, BonFire, Unadorned Desk, and using multiple papers for controls as investigated in PLink. Furthermore, we will provide a better understanding of ad hoc creation of controls on paper for single users.
